Add unit test run-wait-timeout-test to verify that --wait can timeout

--- a/test/Makefile
+++ b/test/Makefile
@@ -192,6 +192,21 @@ run-wait-test:
 	docker logs test-nginx 2>&1 | egrep -q '^DONE'
 	@echo "run-wait-test PASSED"
 
+run-wait-timeout-test:
+	@docker rm -f test-nginx >/dev/null 2>&1 || true
+
+	@echo "\n\nrun-wait-timeout-test:"
+	@echo "\tVerify that when the primary command does not run if --wait times out"
+	@echo "################################################################################"
+	docker run -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
+	    --timeout 2s \
+		--wait http://amazon.com:81 \
+		echo DONE && exit 1 || true
+	docker logs test-nginx 2>&1 | egrep -q 'Waiting for host: http://amazon.com:81'
+	docker logs test-nginx 2>&1 | egrep -q 'Timeout after 2s waiting.*amazon'
+	docker logs test-nginx 2>&1 | egrep -q '^DONE' && exit 1 || true
+	@echo "run-wait-timeout-test PASSED"
+
 run-user-option-test:
 	@docker rm -f test-nginx >/dev/null 2>&1 || true
 
