Fix signal propagation from dockerfy to its start and primary commands.

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,7 @@
 .PHONY : build run-staging run-prod stop run-proxy-amazon run-prod-secrets
 .PHONY : .zombie-maker-debian-binary
 
+SHELL:=/bin/bash
 TAG:=`git describe --tags`
 
 export SHELL = /bin/bash
@@ -83,7 +84,9 @@ just-test: start-tests run-zombie-test \
 	run-before-primary-test run-fails-before-primary-test \
 	run-primary-service-exits run-wait-test \
 	run-user-option-test run-option-expansion-test \
-	run-exit-code-test run-template-funcs-test
+	run-exit-code-test run-template-funcs-test \
+	run-signal-passing-test
+
 	@echo -e "\n\nALL TESTS PASSED"
 
 
@@ -339,3 +342,42 @@ run-template-funcs-test:
 	@echo -e "\tsplit"
 	@../dockerfy -- echo '{{range $$i, $$v := split "a,b,c" ","}}{{$$v}}__{{end}}' | egrep  -q '^a__b__c__$$'
 	@echo "run-template-funcs-test PASSED"
+
+
+tmpfile := $(shell echo "/tmp/$$RANDOM.out")
+
+run-signal-passing-test:
+	@echo -e "\n\nrun-signal-passing-test: "
+	@echo -e "\tVerify that dockerfy passes signals to start commands and the primary command"
+	@echo "################################################################################"
+	@-kill  $$(ps | egrep 'dockerfy.*run-signal-passing-test' | egrep -v egrep | cut -d' ' -f1) 2>/dev/null
+	@sleep 1
+	@if ps | egrep -v egrep | egrep -q 'dockerfy.*run-signal-passing-test'; then echo "dockerfy is still running"; exit 1; fi
+	../dockerfy --debug --run echo run-signal-passing-test -- \
+		--start nohup sleep 500 -- --start nohup sleep 600 -- nohup sleep 700 > $(tmpfile) 2>&1 &
+
+	@echo -e "\n\tverify that SIGHUP passes thru to children"
+	@# Send a SIGHUP, which will propagate to the children, but NOT cause them to terminate
+	@# because they are nohup'ed
+	@kill -1 $$(ps | egrep 'dockerfy.*run-signal-passing-test' | egrep -v egrep | cut -d' ' -f1)
+	@sleep 1
+
+	@cat $(tmpfile) | egrep -q 'Command `nohup sleep 500` received signal hangup'
+	@cat $(tmpfile) | egrep -q 'Command `nohup sleep 600` received signal hangup'
+	@cat $(tmpfile) | egrep -q 'Command `nohup sleep 700` received signal hangup'
+
+	@echo -e "\tverify that SIGTERM terminates children"
+	@# Send a SIGTERM, which will propagate to the children, AND cause them to terminate
+	@kill $$(ps | egrep 'dockerfy.*run-signal-passing-test' | egrep -v egrep | cut -d' ' -f1)
+	@sleep 1
+
+	@cat $(tmpfile) | egrep -q 'Command `nohup sleep 500` exited with error: signal: terminated'
+	@cat $(tmpfile) | egrep -q 'Command `nohup sleep 600` exited with error: signal: terminated'
+	@cat $(tmpfile) | egrep -q 'Command `nohup sleep 700` exited with error: signal: terminated'
+
+	@ps | egrep -v grep | egrep -q 'dockerfy.*run-signal-passing-test' && \
+		(echo "dockerfy failed to exit"; exit 1) || true
+	@ps | egrep -v grep | egrep -q 'sleep [567]00' && \
+		(echo "dockerfy's children did not terminate"; exit 1) || true
+
+	@echo "run-signal-passing-test PASSED"
